// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GroupDetailsPanel/> as site group 1`] = `
<div
  className="panel panel-default"
>
  <div
    className="panel-heading"
  >
    Editor User Group
  </div>
  <div
    className="panel-body"
  >
    <div
      className="row"
    >
      <div
        className="principal-detail-label col-xs-4"
      >
        User Count
      </div>
      <div
        className="principal-detail-value col-xs-8"
      >
        1
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="principal-detail-label col-xs-4"
      >
        Group Count
      </div>
      <div
        className="principal-detail-value col-xs-8"
      >
        1
      </div>
    </div>
    <hr
      className="principal-hr"
    />
    <div
      className="row"
    >
      <div
        className="principal-detail-label col-xs-4"
      >
        Created
      </div>
      <div
        className="principal-detail-value col-xs-8"
      >
        
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="principal-detail-label col-xs-4"
      >
        Site Group
      </div>
      <div
        className="principal-detail-value col-xs-8"
      >
        true
      </div>
    </div>
    <hr
      className="principal-hr"
    />
    <div
      className="row"
    >
      <div
        className="principal-detail-label col-xs-4"
      >
        Permissions
      </div>
      <div
        className="principal-detail-value col-xs-8"
      >
        <ul
          className="principal-detail-ul"
        >
          <li
            className="principal-detail-li"
          >
            Editor
          </li>
        </ul>
      </div>
    </div>
    <hr
      className="principal-hr"
    />
    <div
      className="row"
    >
      <div
        className="principal-detail-label col-xs-4"
      >
        Members
      </div>
      <div
        className="principal-detail-value col-xs-8"
      >
        <ul
          className="principal-detail-ul"
        >
          <li
            className="principal-detail-li"
          >
            user1
          </li>
          <li
            className="principal-detail-li"
          >
            group1
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`<GroupDetailsPanel/> no principal 1`] = `
<div
  className="panel panel-default"
>
  <div
    className="panel-heading"
  >
    Group Details
  </div>
  <div
    className="panel-body"
  >
    <div>
      No group selected.
    </div>
  </div>
</div>
`;

exports[`<GroupDetailsPanel/> with principal and members 1`] = `
<div
  className="panel panel-default"
>
  <div
    className="panel-heading"
  >
    Editor User Group
  </div>
  <div
    className="panel-body"
  >
    <div
      className="row"
    >
      <div
        className="principal-detail-label col-xs-4"
      >
        User Count
      </div>
      <div
        className="principal-detail-value col-xs-8"
      >
        2
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="principal-detail-label col-xs-4"
      >
        Group Count
      </div>
      <div
        className="principal-detail-value col-xs-8"
      >
        1
      </div>
    </div>
    <hr
      className="principal-hr"
    />
    <div
      className="row"
    >
      <div
        className="principal-detail-label col-xs-4"
      >
        Created
      </div>
      <div
        className="principal-detail-value col-xs-8"
      >
        
      </div>
    </div>
    <hr
      className="principal-hr"
    />
    <div
      className="row"
    >
      <div
        className="principal-detail-label col-xs-4"
      >
        Permissions
      </div>
      <div
        className="principal-detail-value col-xs-8"
      >
        <ul
          className="principal-detail-ul"
        >
          <li
            className="principal-detail-li"
          >
            Editor
          </li>
        </ul>
      </div>
    </div>
    <hr
      className="principal-hr"
    />
    <div
      className="row"
    >
      <div
        className="principal-detail-label col-xs-4"
      >
        Members
      </div>
      <div
        className="principal-detail-value col-xs-8"
      >
        <ul
          className="principal-detail-ul"
        >
          <li
            className="principal-detail-li"
          >
            user1
          </li>
          <li
            className="principal-detail-li"
          >
            user2
          </li>
          <li
            className="principal-detail-li"
          >
            group1
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
